option('tests', type: 'feature', description: 'Build tests')
option('oe-sdk', type: 'feature', description: 'Enable OE SDK')

option('GUARD_RO_PATH', type : 'string',
        value : '/var/lib/phosphor-software-manager/pnor/ro/GUARD',
        description : 'GUARD file path in ro partition'
      )

option('GUARD_PRSV_PATH', type : 'string',
        value : '/var/lib/phosphor-software-manager/pnor/prsv/GUARD',
        description : 'GUARD file path in prsv partition'
      )

option('GUARD_ERR', type : 'integer',
        value : 1,
        description : 'GUARD loglevel for error-case log'
      )

option('GUARD_INF', type : 'integer',
        value : 2,
        description : 'GUARD loglevel for informational log'
      )

option('GUARD_DBG', type : 'integer',
        value : 3,
        description : 'GUARD loglevel for debug log'
      )

option('devtree', type: 'feature', value : 'disabled',
        description : '''Enable to get physical path value from
                         power system device tree''')
