option('tests', type: 'feature', description: 'Build tests')
option('oe-sdk', type: 'feature', description: 'Enable OE SDK')

option('GUARD_RO_PATH', type : 'string',
        value : '/var/lib/phosphor-software-manager/pnor/ro/GUARD',
        description : 'GUARD file path in ro partition'
      )

option('GUARD_PRSV_PATH', type : 'string',
        value : '/var/lib/phosphor-software-manager/pnor/prsv/GUARD',
        description : 'GUARD file path in prsv partition'
      )

option('devtree', type: 'feature', value : 'disabled',
        description : '''Enable to get physical path value from
                         power system device tree''')

# Log level: 0 - Emergency, 1 - Alert, 2 - Critical, 3 - Error,
#            4 - Warning, 5 - Notice, 6 - Info, 7 - Debug
option('verbose', type: 'combo',
       choices : ['0', '1', '2', '3', '4', '5', '6', '7'],
       value : '3', description : 'Use to pass verbose level for trace')
